@@ -67,7 +67,7 @@ o) cd to your linux-gpib directory and run the './configure' script.
 	option unless you have a kernel version >= 3.12.0 with
 	CONFIG_ISA set.
 
-	If the configure script does not exist (you are using a cvs
+	If the configure script does not exist (you are using a svn
 	checkout), it can be generated by running the './bootstrap'
 	script.  You will need automake, autoconf, etc. to generate
 	the configure script.
